syntax = "proto3";// 版本
package kcwiki.msgtransfer.protobuf; // 命名空间

option java_package = "kcwiki.msgtransfer.protobuf.proto";//生成java包名
option java_outer_classname = "WebsocketSystemProto"; //生成Java类名
option java_multiple_files = true;

message WebsocketSystem {
    enum SystemMessageType {
        SYSTEM_INFO = 0;
        DEBUG_MSG = 1;
        PAYLOAD_ERROR = 2;
        CLIENT_REBOOT = 3;
        CLIENT_SHUTDOWN = 4;
        SERVER_REBOOT = 5;
        SERVER_SHUTDOWN = 6;
        AUTHORIZATION_REQUIRED = 7;
        AUTHORIZATION_FAIL = 8;
        AUTHORIZATION_SUCCESS = 9;
        PING = 10;
    }
    SystemMessageType msg_type = 1;
    string data = 2;
}